--- a/demo/test_app/recommend_system_version2/Chatbot/Qwen_Chatbot.html
+++ b/demo/test_app/recommend_system_version2/Chatbot/Qwen_Chatbot.html
@@ -1,10 +1,23 @@
+{% extends "base.html" %}
+
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Qwen_Chatbot</title>
+    <style>
+        html, body, iframe {
+            margin: 0;
+            padding: 0;
+            height: 100%;  /* 修改这里 */
+            width: 100%;  /* 修改这里 */
+            overflow: hidden;
+        }
+    </style>
 </head>
 <body>
-<iframe src="http://127.0.0.1:5000"></iframe>
+    <iframe src="http://127.0.0.1:5000" style="height:100%; width:100%;"></iframe>
 </body>
 </html>
+{% endblock %}
